Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57292

[eglfs/wayland] touch/click outside of the parent dialog doesn't close popup, not like in Desktop or Qt 4.8

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.6.0, 5.7.0
    • QPA: EGLFS
    • respberry pi3 with Boot2Qt, Desktop Linux, Windows

      How to reproduce it:

      1. build the attached application
      2. run it
      3. there is a main window that has a push button "Open Dialog". Clicking the button opens a dialog. The dialog has a "Show Popup" button. The dialog has a grey background to make it clear which part of the screen is Dialog and which is MainWindow.
      4. clicking the button opens a popup - in this case it is a QMenu. The menu contains a single item showing the Qt version.

      Current result : touching on the MainWindow doesn't close the popup on eglfs
      Expected result : the same behavior as , on desktop or 4.8, that touching anywhere on the application (MainWindow or Dialog) closes the popup and focus returns to the dialog.

        1. widgetsmodaltest_customer.zip
          4 kB
          Mark Botting
        2. widgetsmodaltest2.tar.gz
          5 kB
          Karim Pinter
        For Gerrit Dashboard: QTBUG-57292
        # Subject Branch Project Status CR V

            tvete Paul Olav Tvete
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes