Close popups when blocked by modal dialog

Don't block the event that Qt depends on to close popups.

Task-number: QTBUG-57292
Change-Id: Ida1f928b81868f68a7b1e19cd0b83485d2a7232e
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 5b65698248325576faa03a2bb78d17349a33a194)