src/gui/kernel/qguiapplication_p.h
@@ -191,6 +191,7 @@ public:
     static void hideModalWindow(QWindow *window);
     static void updateBlockedStatus(QWindow *window);
     virtual bool isWindowBlocked(QWindow *window, QWindow **blockingWindow = 0) const;
+    virtual bool popupActive() { return false; }
 
     static Qt::MouseButtons buttons;
     static ulong mousePressTime;
